[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshnet"
version = "0.1.0"
description = "Two-node Meshtastic test network CLI"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
meshnet = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
