[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshnet"
version = "0.4.0"
description = "Reliable Meshtastic runtime and scheduled Flower byte-stream bridge"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
meshnet = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*", "meshnet_api*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
